// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cmrt.worker;

option java_multiple_files = true;
option java_outer_classname = "JobDataProto";
option java_package = "com.google.cmrt.cmrtworker";

// For faster allocations of sub-messages.
option cc_enable_arenas = true;

// Data in job.
message JobData {
    string public_key_id = 1;
    string failure_reason = 2;
    string data_bucket_name = 3;
    string data_blob_name = 4;
    string result_bucket_name = 5;
    string result_blob_name = 6;
    string owner_id = 7;
    string attestation_info = 8;
}
